// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches enzyme snapshots matches snapshot - false 1`] = `
<div
  className="DisabledSection-dp9deb-0 jsfwHA"
  disabled={false}
>
  <input />
</div>
`;

exports[`matches enzyme snapshots matches snapshot 1`] = `
<div
  className="DisabledSection-dp9deb-0 bvmtDu"
>
  <input />
</div>
`;

exports[`matches test renderer snapshot serializes the styles 1`] = `
<div
  className="DisabledSection-dp9deb-0 bvmtDu"
>
  <input />
</div>
`;
